text overflow fix on mobile

--- a/style.css
+++ b/style.css
@@ -86,4 +86,7 @@ img{
 		padding-left: 10px!important;
 		border-right: 1px solid #353c31!important;
 	}
+	.ctext{
+		margin-right: 20%;
+	}
 }
